reduce z-index of main.bar to 1 to avoid top bar content show up behind the main bar after latest changes

--- a/src/components/manage/Blocks/Title/variations/styles.less
+++ b/src/components/manage/Blocks/Title/variations/styles.less
@@ -1,6 +1,6 @@
 .view-viewview.light-header .main.bar {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   width: 100%;
   margin-bottom: -160px;
 }
